# vector-db-client

./: README.md  docker-compose.yml  example_usage.ipynb  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
