[project]
name = "qdrant-vector-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.1.0",
    "torch==2.1.0",
    "uvicorn>=0.34.1",
]
